--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.9.6"
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4"
   }
 }
