--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "hashmap": "^2.4.0",
+    "parse": "^2.13.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-compound-timer": "^1.2.0",
     "react-dom": "^16.13.1",
     "react-fitted-image": "^1.0.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-use": "^14.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
