--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "whack-a-mole",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://natemek.github.io/Whack-A-Mole/",
   "proxy": "http://localhost:8000/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
